# conversational-agent-langchain

./: .dockerignore  .env-template  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose-hub.yml  docker-compose-traefik.yml  docker-compose.yml  gui.py  initialize_vector_db.sh  pyproject.toml  requirements.txt  ruff.toml  template.env  test.py  weave.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_push_dockerhub.yml  codeql.yml  docker-compose.yml  prek.yml  pylint.yml  pytest.yaml  test.yml
.idx/: dev.nix
ConvAgentBruno/: bruno.json
ConvAgentBruno/Embeddings/: Delete.bru  Documents.bru  Text.bru
ConvAgentBruno/RAG/: Chat.bru  Stream.bru
ConvAgentBruno/Search/: Search.bru
agent/: api.py  backend.py  gui.py  initialize_vector_db.py
agent/backend/: LLMBase.py  LLMStrategy.py  aleph_alpha_service.py  cohere_service.py  gpt4all_service.py  graph.py  ollama_service.py  open_ai_service.py  prompts.py
agent/backend.py/: aleph_alpha_service.py  open_ai_service.py
agent/backend/services/: aleph_alpha_service.py  cohere_service.py  gpt4all_service.py  ollama_service.py  open_ai_service.py
agent/data_model/: internal_model.py  request_data_model.py  response_data_model.py  rest_data_model.py
agent/database/: chroma_db.py
agent/ingestion/: aleph_alpha_ingestion.py  gpt4all_ingestion.py  ingestion_utils.py
agent/routes/: collection.py  delete.py  embeddings.py  explanation.py  rag.py  search.py
agent/scripts/: visualize_graph.py
agent/utils/: configuration.py  utility.py  vdb.py
config/: chroma_db.yml  db.yml  litellm.yml  main.yml  prompts.yaml  qdrant.yaml  weaviate.yml
config/ai/: aleph_alpha.yml  gpt4all.yml  ollama.yml  openai.yml
conversational_agent/: RAG.bru  bruno.json
frontend/: assistant.py  client.py  gui.py  pyproject.toml  requirements.txt
frontend/pages/: 0_research_assistant.py  1_upload_pdfs.py  2_semantic_search.py  3_explain_qa.py
prompts/: cohere_response_template.txt  qa.j2  rephrase_template.txt  response_template.txt
prompts/chat/: aleph_alpha_chat.j2  cohere_chat.j2  openai-qa.j2
prompts/de/: gpt4all-summarization.j2  openai-qa.j2  openai-summarization.j2  qa.j2
prompts/en/: aleph_alpha_qa.j2  gpt4all-summarization.j2  invoice.j2  ollama-qa.j2  openai-summarization.j2
src/agent/: api.py
src/agent/backend/: LLMBase.py  LLMStrategy.py  graph.py  prompts.py  state.py
src/agent/backend/nodes/: generation.py  grading.py  retrieval.py  rewrite.py
src/agent/backend/services/: cohere_service.py  embedding_management.py  memory_service.py  ollama_service.py  open_ai_service.py
src/agent/data_model/: internal_model.py  request_data_model.py  response_data_model.py
src/agent/routes/: collection.py  delete.py  embeddings.py  rag.py  search.py
src/agent/scripts/: generate_diagrams.py  load_dummy_data.py  visualize_graph.py
src/agent/utils/: config.py  embeddings.py  prompts.py  reranker.py  retriever.py  utility.py  vdb.py
tests/: conftest.py  manual_tests.md  test_aa_services.py  test_api.py  test_integration.py  test_stream.py
tests/e2e_tests/: test_api.py  test_e2e_aleph_alpha_service.py  test_e2e_gpt4all.py
tests/fakes/: __init__.py  rag.py
tests/integration_tests/: test_full_integration_aleph_alpha.py
tests/resources/: albert.txt  file1.txt
tests/test_routes/: test_collection_routes.py  test_embeddings_routes.py
tests/unit_tests/: test_api.py  test_embedding_management.py  test_llm_base.py  test_llm_strategy.py  test_memory_service.py  test_openai_compat.py  test_prompts.py  test_rag_graph.py  test_reranker.py  test_routes_embeddings.py  test_search_delete.py  test_utility.py  test_vdb.py
tests/unit_tests/services/: cohere.py  gpt4all.py  ollama.py  openai.py  test_cohere_service.py  test_ollama_service.py  test_open_ai_service.py
tests/vcr/: test_contracts.py  test_embedding_and_reranker_requests.py  test_litellm_requests.py  test_llm_requests.py
tests/vcr/cassettes/test_embedding_and_reranker_requests/: test_cohere_reranker_vcr.yaml  test_langchain_cohere_embedding_vcr.yaml
tests/vcr/cassettes/test_litellm_requests/: test_litellm_gemini_chat_vcr.yaml
tests/vcr/cassettes/test_llm_requests/: test_openai_chat_completion_vcr.yaml  test_openai_embeddings_vcr.yaml
