[project]
name = "agent"
version = "3.0.0"
description = "Add your description here"
authors = [
    { name = "Marc Fabian Mezger", email = "57255687+mfmezger@users.noreply.github.com" }
]
requires-python = ">= 3.13"
readme = "README.md"
dependencies = [
    "werkzeug==3.1.3",
    "ultra-simple-config>=0.1.0",
    "langgraph>=1.0.2",
    "litellm>=1.79.1",
    "fastembed>=0.7.3",
    "arize-phoenix>=12.9.0",
    "openai>=2.6.1",
    "fastapi>=0.120.4",
    "python-dotenv>=1.2.1",
    "langchain-cohere>=0.4.6",
    "omegaconf>=2.3.0",
    "loguru>=0.7.3",
    "tiktoken>=0.12.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "pypdfium2>=4.30.0",
    "uvicorn>=0.30.0",
    "arize-phoenix-otel>=0.13.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "pyfiglet>=1.0.0",
    "langchain-qdrant>=0.1.0",
    "aiofiles>=23.0.0",
    "streamlit>=1.30.0",
    "langchain>=0.3.0",
]


[project.scripts]
agent = "agent:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"


[tool.mypy]
disallow_untyped_defs = true
# disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
