[project]
name = "agent"
version = "5.5.0"
description = "Add your description here"
authors = [
    { name = "Marc Fabian Mezger", email = "57255687+mfmezger@users.noreply.github.com" }
]
requires-python = ">= 3.13"
readme = "README.md"
dependencies = [
    "ultra-simple-config>=0.1.0",
    "langgraph>=1.0.9",
    "litellm>=1.81.15",
    "fastembed>=0.7.4",
    "arize-phoenix>=13.3.0",
    "openai>=2.24.0",
    "fastapi>=0.133.1",
    "python-dotenv>=1.2.1",
    "langchain-cohere>=0.5.0",
    "omegaconf>=2.3.0",
    "loguru>=0.7.3",
    "tiktoken>=0.12.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "pypdfium2>=5.5.0",
    "uvicorn>=0.41.0",
    "arize-phoenix-otel>=0.14.0",
    "openinference-instrumentation-langchain>=0.1.60",
    "pyfiglet>=1.0.4",
    "langchain-qdrant>=1.1.0",
    "aiofiles>=25.1.0",
    "streamlit>=1.54.0",
    "langchain>=1.2.10",
    "langchain-litellm>=0.5.1",
    "flashrank>=0.2.0",
    "werkzeug>=3.1.6",
]


[project.scripts]
agent = "agent:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"


[tool.mypy]
disallow_untyped_defs = true
# disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "coverage>=7.13.4",
    "dirty-equals>=0.11",
    "inline-snapshot>=0.32.3",
    "pytest-xdist>=3.8.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-recording>=0.13.4",
    "httpx>=0.28.1",
]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --durations=20"
xfail_strict = true
markers = [
    "unit: pure unit tests",
    "integration: integration tests with in-process dependencies",
    "contract: endpoint contract tests without external network dependencies",
    "e2e: end-to-end tests requiring external services",
    "vcr: tests backed by recorded HTTP interactions",
    "slow: long-running tests",
]
filterwarnings = [
    "ignore:`json_encoders` is deprecated:pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:Support for class-based `config` is deprecated:pydantic.warnings.PydanticDeprecatedSince20"
]
